Refine password toggle, parallax effects, and float-icon styling

--- a/public/login.html
+++ b/public/login.html
@@ -41,6 +41,7 @@
           src="assets/images/icon-eye.png"
           class="toggle-password"
           id="togglePassword"
+          alt="Toggle password"
         />
       </div>
 
