--- a/public/signup.html
+++ b/public/signup.html
@@ -41,6 +41,7 @@
           src="assets/images/icon-eye.png"
           class="toggle-password"
           id="togglePassword"
+          alt="Toggle password"
         />
       </div>
 
