Update dashboard paths to absolute URLs

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <title>ViralClip Dashboard</title>
-  <link rel="stylesheet" href="../assets/css/dashboard.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/dashboard.css" />
 </head>
 <body>
   <div class="app">
@@ -59,8 +60,8 @@
       <button id="schedule-post" class="primary">Schedule post</button>
     </div>
   </div>
-
-  <script src="../assets/js/router.js"></script>
+/assets/js/router.js"></script>
+  <script src="/assets/js/router.js"></script>
   <script src="../assets/js/modal.js"></script>
 </body>
 </html>
