--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -3,96 +3,82 @@
 <head>
   <meta charset="UTF-8" />
   <title>Dashboard – ViralClip</title>
-
   <link rel="stylesheet" href="/assets/css/dashboard.css" />
 </head>
 <body>
 
-<div class="app-layout">
+<div class="app">
 
   <!-- SIDEBAR -->
   <aside class="sidebar">
-    <div class="logo">ViralClip</div>
+    <div class="brand">ViralClip</div>
 
-    <nav class="nav">
+    <nav>
       <a class="active">Dashboard</a>
-      <a href="/dashboard/calendar.html">Calendar</a>
-      <a href="/dashboard/clips.html">Clips</a>
-      <a href="/dashboard/accounts.html">Accounts</a>
-      <a href="/dashboard/analytics.html">Analytics</a>
-      <a href="/dashboard/settings.html">Settings</a>
+      <a>Calendar</a>
+      <a>Clips</a>
+      <a>Accounts</a>
+      <a>Analytics</a>
+      <a>Settings</a>
     </nav>
 
-    <div class="sidebar-footer">
-      <span>John Doe</span>
-      <a href="#">Sign out</a>
+    <div class="profile">
+      <div class="avatar"></div>
+      <div>
+        <strong>Sarah Mitchell</strong>
+        <span>Pro</span>
+      </div>
     </div>
   </aside>
 
   <!-- MAIN -->
   <main class="main">
 
-    <!-- TOP BAR -->
     <header class="topbar">
       <h1>Dashboard</h1>
-
-      <div class="topbar-actions">
-        <button class="btn-secondary">Search</button>
-        <button class="btn-primary">+ Create Post</button>
+      <div class="actions">
+        <input type="search" placeholder="Search" />
+        <button class="primary">+ Create Post</button>
       </div>
     </header>
 
-    <!-- DASHBOARD GRID -->
-    <section class="dashboard-grid">
+    <section class="grid">
 
-      <!-- LEFT / MAIN COLUMN -->
-      <div class="column-main">
+      <!-- CENTER -->
+      <div class="center">
 
-        <!-- GREETING -->
         <div class="card greeting">
           <h2>Good morning, Sarah 👋</h2>
           <p>You have <strong>5 posts</strong> scheduled today.</p>
         </div>
 
-        <!-- CONTENT PLANNER PREVIEW -->
-        <div class="card">
+        <div class="card planner">
           <div class="card-header">
             <h3>Content Planner</h3>
-            <a class="link">View full calendar →</a>
+            <a>View full calendar →</a>
           </div>
 
           <div class="planner-row">
-            <div class="planner-card">
-              <span class="platform instagram">Instagram</span>
-              <span class="time">3:00 PM</span>
-            </div>
-            <div class="planner-card">
-              <span class="platform tiktok">TikTok</span>
-              <span class="time">5:00 PM</span>
-            </div>
-            <div class="planner-card">
-              <span class="platform youtube">YouTube</span>
-              <span class="time">8:00 PM</span>
-            </div>
+            <div class="pill instagram">Instagram · 3:00 PM</div>
+            <div class="pill tiktok">TikTok · 5:00 PM</div>
+            <div class="pill youtube">YouTube · 8:00 PM</div>
           </div>
         </div>
 
       </div>
 
-      <!-- RIGHT COLUMN -->
-      <div class="column-side">
+      <!-- RIGHT -->
+      <div class="right">
 
-        <!-- UPCOMING POSTS -->
         <div class="card">
           <h3>Upcoming Posts</h3>
-          <ul class="stat-list">
-            <li><strong>5</strong> Today</li>
-            <li><strong>3</strong> Publishing today</li>
-            <li><strong>2</strong> Overdue drafts</li>
+          <ul>
+            <li>5 Today</li>
+            <li>3 Publishing today</li>
+            <li>2 Overdue drafts</li>
           </ul>
         </div>
 
-        <!-- AI CAPTIONS -->
         <div class="card">
           <h3>AI Caption Suggestions</h3>
           <div class="tags">
@@ -100,28 +86,21 @@
             <span>#trendalert</span>
             <span>#fitnessgoals</span>
           </div>
-          <button class="btn-secondary full">Generate new</button>
+          <button class="ghost">Generate new</button>
         </div>
 
-        <!-- PERFORMANCE -->
         <div class="card">
           <h3>Performance Overview</h3>
-          <ul class="stat-list">
-            <li>Instagram: <strong>12.4k</strong> ↑</li>
-            <li>TikTok: <strong>67.8k</strong> ↑</li>
-            <li>YouTube: <strong>6.3k</strong> ↑</li>
-          </ul>
+          <p>Instagram: <strong>12.4k ↑</strong></p>
+          <p>TikTok: <strong>67.8k ↑</strong></p>
+          <p>YouTube: <strong>6.3k ↑</strong></p>
         </div>
 
-        <!-- CONNECTED ACCOUNTS -->
         <div class="card">
           <h3>Connected Accounts</h3>
-          <ul class="account-list">
-            <li>Instagram ✅</li>
-            <li>TikTok ✅</li>
-            <li>YouTube ⛔</li>
-            <li>Twitter/X ⛔</li>
-          </ul>
+          <p>Instagram ✅</p>
+          <p>TikTok ✅</p>
+          <p>YouTube ❌</p>
         </div>
 
       </div>
