Update dashboard UI structure and assets

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -11,9 +11,9 @@
 
   <!-- SIDEBAR -->
   <aside class="sidebar">
-    <div class="brand">
-      <img src="/assets/icons/logo.svg" alt="ViralClip" />
-      <span>ViralClip</span>
+    <div class="sidebar-brand">
+      <img src="/assets/images/logo.png" class="logo-icon" alt="ViralClip" />
+      <span class="logo-text">ViralClip</span>
     </div>
 
     <nav>
@@ -55,18 +55,21 @@
   <!-- MAIN -->
   <main class="main">
 
-    <header class="topbar">
-      <h1>Dashboard</h1>
-      <div class="actions">
-        <button class="icon-btn" aria-label="Search">
-          <img src="/assets/icons/search.svg" alt="" />
-        </button>
-        <button class="primary-btn">
-          <img src="/assets/icons/plus.svg" alt="" />
-          Create Post
-        </button>
+    <div class="top-nav">
+      <nav>
+        <a class="active">Dashboard</a>
+        <a>Calendar</a>
+        <a>Clips</a>
+        <a>Accounts</a>
+        <a>Analytics</a>
+      </nav>
+
+      <div class="top-actions">
+        <button class="icon-btn" aria-label="Search">🔍</button>
+        <button class="primary">+ Create Post</button>
+        <img class="avatar" src="/assets/images/avatar.png" alt="User avatar" />
       </div>
-    </header>
+    </div>
 
     <section class="grid">
 
@@ -75,7 +78,7 @@
 
         <div class="card greeting">
           <h2>
-            Good morning, <span id="user-name">there</span> 👋
+            Good morning, <span id="username">there</span> 👋
           </h2>
           <p>You have <strong>5 posts</strong> scheduled today.</p>
         </div>
@@ -86,18 +89,20 @@
             <a>View full calendar →</a>
           </div>
 
-          <div class="planner-row">
-            <div class="pill instagram">
-              <img src="/assets/icons/instagram.svg" alt="" />
-              Instagram · 3:00 PM
+          <div class="planner-grid">
+            <div class="planner-card">
+              <img src="/assets/images/platform-instagram.png" alt="" />
+              <span>Instagram · 3:00 PM</span>
             </div>
-            <div class="pill tiktok">
-              <img src="/assets/icons/tiktok.svg" alt="" />
-              TikTok · 5:00 PM
+
+            <div class="planner-card">
+              <img src="/assets/images/platform-tiktok.png" alt="" />
+              <span>TikTok · 5:00 PM</span>
             </div>
-            <div class="pill youtube">
-              <img src="/assets/icons/youtube.svg" alt="" />
-              YouTube · 8:00 PM
+
+            <div class="planner-card">
+              <img src="/assets/images/platform-youtube.png" alt="" />
+              <span>YouTube · 8:00 PM</span>
             </div>
           </div>
         </div>
@@ -110,9 +115,14 @@
         <div class="card">
           <h3>Upcoming Posts</h3>
           <ul>
-            <li>5 Today</li>
-            <li>3 Publishing today</li>
-            <li>2 Overdue drafts</li>
+            <li>
+              <img src="/assets/images/platform-instagram.png" alt="" />
+              Today <span>5</span>
+            </li>
+            <li>
+              <img src="/assets/images/platform-tiktok.png" alt="" />
+              Publishing today <span>3</span>
+            </li>
           </ul>
         </div>
 
@@ -128,16 +138,16 @@
 
         <div class="card">
           <h3>Performance Overview</h3>
-          <p>Instagram: <strong>12.4k ↑</strong></p>
-          <p>TikTok: <strong>67.8k ↑</strong></p>
-          <p>YouTube: <strong>6.3k ↑</strong></p>
+          <p><img src="/assets/images/platform-instagram.png" alt="" /> Instagram: <strong>12.4k ↑</strong></p>
+          <p><img src="/assets/images/platform-tiktok.png" alt="" /> TikTok: <strong>67.8k ↑</strong></p>
+          <p><img src="/assets/images/platform-youtube.png" alt="" /> YouTube: <strong>6.3k ↑</strong></p>
         </div>
 
         <div class="card">
           <h3>Connected Accounts</h3>
-          <p>Instagram ✅</p>
-          <p>TikTok ✅</p>
-          <p>YouTube ❌</p>
+          <p><img src="/assets/images/platform-instagram.png" alt="" /> Instagram ✅</p>
+          <p><img src="/assets/images/platform-tiktok.png" alt="" /> TikTok ✅</p>
+          <p><img src="/assets/images/platform-youtube.png" alt="" /> YouTube ❌</p>
         </div>
 
       </div>
@@ -148,44 +158,5 @@
 </div>
 
 <script type="module" src="/assets/js/dashboard.js"></script>
-</body>
-</html>
-          <button class="view-btn active">Month</button>
-        </div>
-      </div>
-
-      <div class="calendar card">
-        <div class="calendar-grid">
-          <div class="day">
-            <div class="day-title">Monday</div>
-
-            <div class="post instagram">
-              <strong>Instagram Post</strong>
-              <span>3:00 PM</span>
-              <p>New product teaser</p>
-            </div>
-
-            <div class="post tiktok">
-              <strong>TikTok Video</strong>
-              <span>2:00 PM</span>
-            </div>
-          </div>
-
-          <div class="day">
-            <div class="day-title">Tuesday</div>
-            <div class="empty">No posts</div>
-          </div>
-
-          <div class="day"><div class="day-title">Wednesday</div></div>
-          <div class="day"><div class="day-title">Thursday</div></div>
-          <div class="day"><div class="day-title">Friday</div></div>
-          <div class="day"><div class="day-title">Saturday</div></div>
-          <div class="day"><div class="day-title">Sunday</div></div>
-        </div>
-      </div>
-
-    </main>
-
-  </div>
 </body>
 </html>
