--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -43,6 +43,18 @@
       </a>
     </nav>
 
+    <div class="sidebar-footer">
+      <button id="logoutBtn" class="logout-btn">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+          <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M21 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M13 3H7C5.9 3 5 3.9 5 5V19C5 20.1 5.9 21 7 21H13"
+                stroke="currentColor" stroke-width="2"/>
+        </svg>
+        <span>Log out</span>
+      </button>
+    </div>
+
     <div class="profile">
       <div class="avatar"></div>
       <div>
