--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Dashboard – ViralClip</title>
   <link rel="stylesheet" href="/assets/css/dashboard.css" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
 
@@ -88,14 +89,14 @@
       <!-- CENTER -->
       <div class="center">
 
-        <div class="card greeting">
+        <div class="card greeting" data-aos="fade-up" data-aos-delay="0">
           <h2>
             Good morning, <span id="username">there</span> 👋
           </h2>
           <p>You have <strong>5 posts</strong> scheduled today.</p>
         </div>
 
-        <div class="card planner">
+        <div class="card planner" data-aos="fade-up" data-aos-delay="100">
           <div class="card-header">
             <h3>Content Planner</h3>
             <a>View full calendar →</a>
@@ -124,7 +125,7 @@
       <!-- RIGHT -->
       <div class="right">
 
-        <div class="card">
+        <div class="card" data-aos="fade-up" data-aos-delay="200">
           <h3>Upcoming Posts</h3>
           <ul>
             <li>
@@ -138,7 +139,7 @@
           </ul>
         </div>
 
-        <div class="card">
+        <div class="card" data-aos="fade-up" data-aos-delay="300">
           <h3>AI Caption Suggestions</h3>
           <div class="tags">
             <span>#viralvideos</span>
@@ -148,14 +149,14 @@
           <button class="ghost">Generate new</button>
         </div>
 
-        <div class="card">
+        <div class="card" data-aos="fade-up" data-aos-delay="400">
           <h3>Performance Overview</h3>
           <p><img src="/assets/images/platform-instagram.png" alt="" /> Instagram: <strong>12.4k ↑</strong></p>
           <p><img src="/assets/images/platform-tiktok.png" alt="" /> TikTok: <strong>67.8k ↑</strong></p>
           <p><img src="/assets/images/platform-youtube.png" alt="" /> YouTube: <strong>6.3k ↑</strong></p>
         </div>
 
-        <div class="card">
+        <div class="card" data-aos="fade-up" data-aos-delay="500">
           <h3>Connected Accounts</h3>
           <p><img src="/assets/images/platform-instagram.png" alt="" /> Instagram ✅</p>
           <p><img src="/assets/images/platform-tiktok.png" alt="" /> TikTok ✅</p>
@@ -168,6 +169,25 @@
 
   </main>
 </div>
+
+<!-- GSAP Animation Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+
+<!-- AOS Animation Library -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+
+<!-- Initialize Animations -->
+<script>
+  AOS.init({
+    duration: 1000,
+    once: false,
+    mirror: true
+  });
+  
+  // GSAP animations
+  gsap.registerPlugin(ScrollTrigger);
+</script>
 
 <script type="module" src="/assets/js/dashboard.js"></script>
 </body>
