Fix dashboard to show actual logged-in user name instead of hardcoded placeholder

--- a/public/dashboard/index.html
+++ b/public/dashboard/index.html
@@ -59,7 +59,7 @@
     <div class="profile">
       <div class="avatar"></div>
       <div>
-        <strong>Sarah Mitchell</strong>
+        <strong id="user-profile-name">Loading...</strong>
         <span>Pro</span>
       </div>
     </div>
