Complete dashboard UI redesign with top navigation bar and platform cards
- Create dedicated topnav.css with styling for top navigation bar
- Add .sidebar-item class for consistent navigation styling
- Enhance components.css with platform card grid layouts
- Add platform card components with icon containers and platform info
- Implement responsive design with 1024px and 768px breakpoints
- Add search button and create post button styling
- Integrate top nav with sidebar navigation for view switching
- Add staggered animations for top nav items
- Update dashboard.html sidebar items to use .sidebar-item class
- Sync top nav active state with sidebar active state

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="/assets/css/dashboard/layout.css" />
   <link rel="stylesheet" href="/assets/css/dashboard/components.css" />
   <link rel="stylesheet" href="/assets/css/dashboard/animations.css" />
+  <link rel="stylesheet" href="/assets/css/dashboard/topnav.css" />
 </head>
 <body>
 
@@ -21,7 +22,7 @@
     </div>
 
     <nav class="nav">
-      <button class="nav-item active" data-view="dashboard">
+      <button class="sidebar-item active" data-view="dashboard">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <rect x="3" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
           <rect x="14" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
@@ -31,7 +32,7 @@
         <span>Dashboard</span>
       </button>
 
-      <button class="nav-item" data-view="calendar">
+      <button class="sidebar-item" data-view="calendar">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <rect x="3" y="4" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
           <path d="M16 2v4M8 2v4M3 10h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -39,7 +40,7 @@
         <span>Calendar</span>
       </button>
 
-      <button class="nav-item" data-view="clips">
+      <button class="sidebar-item" data-view="clips">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <rect x="2" y="2" width="20" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
           <path d="M10 8l6 4-6 4V8z" fill="currentColor"/>
@@ -47,7 +48,7 @@
         <span>Clips</span>
       </button>
 
-      <button class="nav-item" data-view="accounts">
+      <button class="sidebar-item" data-view="accounts">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <circle cx="12" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
           <path d="M6 21v-2a4 4 0 014-4h4a4 4 0 014 4v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -55,7 +56,7 @@
         <span>Accounts</span>
       </button>
 
-      <button class="nav-item" data-view="analytics">
+      <button class="sidebar-item" data-view="analytics">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <path d="M3 3v18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           <path d="M7 16l4-4 4 4 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -63,7 +64,7 @@
         <span>Analytics</span>
       </button>
 
-      <button class="nav-item" data-view="settings">
+      <button class="sidebar-item" data-view="settings">
         <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
           <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
           <path d="M12 1v6m0 6v10M23 12h-6m-2 0H1" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
@@ -94,6 +95,33 @@
 
   <!-- MAIN APP CONTAINER -->
   <main class="app">
+    <!-- Top Navigation Bar -->
+    <nav class="top-nav">
+      <div class="top-nav-left">
+        <button class="top-nav-item active" data-view="dashboard">Dashboard</button>
+        <button class="top-nav-item" data-view="calendar">Calendar</button>
+        <button class="top-nav-item" data-view="clips">Clips</button>
+        <button class="top-nav-item" data-view="accounts">Accounts</button>
+        <button class="top-nav-item" data-view="analytics">Analytics</button>
+      </div>
+      
+      <div class="top-nav-right">
+        <button class="search-btn" title="Search">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <circle cx="11" cy="11" r="8" stroke="currentColor" stroke-width="2"/>
+            <path d="M21 21l-4.35-4.35" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+        </button>
+        <button class="create-post-btn">
+          <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
+            <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          Create Post
+        </button>
+        <div class="profile-avatar" id="top-avatar"></div>
+      </div>
+    </nav>
+
     <!-- Contextual Top Bar (Changes per view) -->
     <header class="topbar" id="topbar"></header>
 
