Replace avatar gradient with ViralClip logo in top navigation

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -118,7 +118,7 @@
           </svg>
           Create Post
         </button>
-        <div class="profile-avatar" id="top-avatar"></div>
+        <img src="/assets/images/logo.png" alt="ViralClip" class="profile-avatar" id="top-avatar">
       </div>
     </nav>
 
