--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -4,132 +4,104 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Dashboard — ViralClip</title>
-  
-  <!-- Modular CSS -->
-  <link rel="stylesheet" href="/assets/css/dashboard/variables.css" />
-  <link rel="stylesheet" href="/assets/css/dashboard/layout.css" />
-  <link rel="stylesheet" href="/assets/css/dashboard/components.css" />
-  <link rel="stylesheet" href="/assets/css/dashboard/animations.css" />
-  <link rel="stylesheet" href="/assets/css/dashboard/topnav.css" />
+  <link rel="stylesheet" href="/assets/css/dashboard.css" />
 </head>
 <body>
-
-  <!-- SIDEBAR (Global Navigation) -->
-  <aside class="sidebar">
-    <div class="brand">
-      <img src="/assets/images/logo.png" alt="ViralClip" />
-      <span>ViralClip</span>
-    </div>
-
-    <nav class="nav">
-      <button class="sidebar-item active" data-view="dashboard">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <rect x="3" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
-          <rect x="14" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
-          <rect x="3" y="14" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
-          <rect x="14" y="14" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
-        </svg>
-        <span>Dashboard</span>
-      </button>
-
-      <button class="sidebar-item" data-view="calendar">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <rect x="3" y="4" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
-          <path d="M16 2v4M8 2v4M3 10h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        <span>Calendar</span>
-      </button>
-
-      <button class="sidebar-item" data-view="clips">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <rect x="2" y="2" width="20" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
-          <path d="M10 8l6 4-6 4V8z" fill="currentColor"/>
-        </svg>
-        <span>Clips</span>
-      </button>
-
-      <button class="sidebar-item" data-view="accounts">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <circle cx="12" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
-          <path d="M6 21v-2a4 4 0 014-4h4a4 4 0 014 4v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        <span>Accounts</span>
-      </button>
-
-      <button class="sidebar-item" data-view="analytics">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <path d="M3 3v18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          <path d="M7 16l4-4 4 4 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        <span>Analytics</span>
-      </button>
-
-      <button class="sidebar-item" data-view="settings">
-        <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-          <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
-          <path d="M12 1v6m0 6v10M23 12h-6m-2 0H1" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-        </svg>
-        <span>Settings</span>
-      </button>
-    </nav>
-
-    <div class="sidebar-footer">
-      <div class="user-profile">
-        <div class="avatar"></div>
-        <div class="user-info">
-          <span class="user-name" id="user-name">Loading...</span>
-          <span class="plan">Pro</span>
-        </div>
+  <div class="dashboard-layout">
+    <!-- SIDEBAR (Static Navigation) -->
+    <aside class="sidebar">
+    <aside class="sidebar">
+      <div class="sidebar-header">
+        <img src="/assets/images/logo.png" alt="ViralClip" class="logo-icon" />
+        <span class="logo-text">ViralClip</span>
       </div>
 
-      <button class="logout-btn" id="logout-btn">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
-          <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          <path d="M21 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-          <path d="M13 3H7C5.9 3 5 3.9 5 5V19C5 20.1 5.9 21 7 21H13" stroke="currentColor" stroke-width="2"/>
-        </svg>
-        <span>Log out</span>
-      </button>
-    </div>
-  </aside>
-
-  <!-- MAIN APP CONTAINER -->
-  <main class="app">
-    <!-- Top Navigation Bar -->
-    <nav class="top-nav">
-      <div class="top-nav-left">
-        <button class="top-nav-item active" data-view="dashboard">Dashboard</button>
-        <button class="top-nav-item" data-view="calendar">Calendar</button>
-        <button class="top-nav-item" data-view="clips">Clips</button>
-        <button class="top-nav-item" data-view="accounts">Accounts</button>
-        <button class="top-nav-item" data-view="analytics">Analytics</button>
-      </div>
-      
-      <div class="top-nav-right">
-        <button class="search-btn" title="Search">
+      <nav class="sidebar-nav">
+        <button data-view="dashboard" class="nav-item active">
           <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
-            <circle cx="11" cy="11" r="8" stroke="currentColor" stroke-width="2"/>
-            <path d="M21 21l-4.35-4.35" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <rect x="3" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
+            <rect x="14" y="3" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
+            <rect x="3" y="14" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
+            <rect x="14" y="14" width="7" height="7" rx="1" stroke="currentColor" stroke-width="2"/>
           </svg>
+          <span>Dashboard</span>
         </button>
-        <button class="create-post-btn">
-          <svg width="16" height="16" viewBox="0 0 24 24" fill="none">
-            <path d="M12 5v14M5 12h14" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+
+        <button data-view="calendar" class="nav-item">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <rect x="3" y="4" width="18" height="18" rx="2" stroke="currentColor" stroke-width="2"/>
+            <path d="M16 2v4M8 2v4M3 10h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
           </svg>
-          Create Post
+          <span>Calendar</span>
         </button>
-        <img src="/assets/images/logo.png" alt="ViralClip" class="profile-avatar" id="top-avatar">
+
+        <button data-view="clips" class="nav-item">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <rect x="2" y="2" width="20" height="20" rx="2" stroke="currentColor" stroke-width="2"/>
+            <path d="M10 8l6 4-6 4V8z" fill="currentColor"/>
+          </svg>
+          <span>Clips</span>
+        </button>
+
+        <button data-view="accounts" class="nav-item">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="8" r="4" stroke="currentColor" stroke-width="2"/>
+            <path d="M6 21v-2a4 4 0 014-4h4a4 4 0 014 4v2" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          <span>Accounts</span>
+        </button>
+
+        <button data-view="analytics" class="nav-item">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <path d="M3 3v18h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M7 16l4-4 4 4 6-6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          <span>Analytics</span>
+        </button>
+
+        <button data-view="settings" class="nav-item">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none">
+            <circle cx="12" cy="12" r="3" stroke="currentColor" stroke-width="2"/>
+            <path d="M12 1v6m0 6v10M23 12h-6m-2 0H1" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          </svg>
+          <span>Settings</span>
+        </button>
+      </nav>
+
+      <div class="sidebar-footer">
+        <div class="user-profile">
+          <div class="avatar"></div>
+          <div class="user-info">
+            <span class="user-name" id="user-name">Loading...</span>
+            <span class="user-plan">Pro</span>
+          </div>
+        </div>
+        <button data-logout-btn class="logout-btn">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M21 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+            <path d="M13 3H7C5.9 3 5 3.9 5 5V19C5 20.1 5.9 21 7 21H13" stroke="currentColor" stroke-width="2"/>
+          </svg>
+          <span>Log out</span>
+        </button>
       </div>
-    </nav>
+    </aside>
 
-    <!-- Contextual Top Bar (Changes per view) -->
-    <header class="topbar" id="topbar"></header>
+    <!-- MAIN CONTENT AREA -->
+    <div class="main-content">
+      <!-- TOPBAR (Dynamic based on view) -->
+      <header class="topbar">
+        <div id="topbar-left"></div>
+        <div id="topbar-right"></div>
+      </header>
 
-    <!-- Content Mount Point (View content injected here) -->
-    <section class="content" id="dashboard-content"></section>
-  </main>
+      <!-- CONTENT MOUNT (Only place that changes) -->
+      <main id="dashboard-content"></main>
+    </div>
+  </div>
 
-  <!-- Modular JavaScript -->
-  <script type="module" src="/assets/js/dashboard/app.js"></script>
-</body>
+  <!-- Scripts -->
+  <script type="module" src="/assets/js/firebase.js"></script>
+  <script type="module" src="/assets/js/dashboard/views.js"></script>
+  <script type="module" src="/assets/js/dashboard/app.js"></script></body>
 </html>
