Repurpose clips into posts hub with actions

--- a/public/dashboard/dashboard.html
+++ b/public/dashboard/dashboard.html
@@ -104,6 +104,7 @@
   <script type="module" src="/assets/js/dashboard/views.js"></script>
   <script type="module" src="/assets/js/dashboard/app.js"></script>
   <script type="module" src="/assets/js/dashboard/createPost.js"></script>
+  <script type="module" src="/assets/js/dashboard/postsActions.js"></script>
 
   <!-- Create Post Modal -->
   <div id="create-post-modal" class="modal hidden">
